--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   http: ^1.2.2
   provider: ^6.1.2
   sqflite: ^2.3.3+1
+  shared_preferences: ^2.3.1
+  android_alarm_manager_plus: ^4.0.4
+  intl: ^0.19.0
+  flutter_local_notifications: ^17.2.1+2
+  rxdart: ^0.28.0
 
 dev_dependencies:
   flutter_test:
